--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,8 +11,8 @@
   <p>
     If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
   </p>
-  <button ion-button [navPush]="salvationLink">Salvation</button>
-  <button ion-button [navPush]="baptismLink">Baptism</button>
+  <button ion-button block [navPush]="salvationLink">Salvation</button>
+  <button ion-button block [navPush]="baptismLink">Baptism</button>
 
 
 </ion-content>
